docker/kub-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: local
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
