docker/kub-grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: local
spec:
  parentRefs:
  - name: gateway
    namespace: infra
  hostnames:
  - "grafana.muscuscope.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana-service
      port: 3000
